Fizemos a classe da conta

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+#outros
+code1.png
+.gitignore
+package-lock.json
+package.json
+tsconfig.json
+code2.png
